src/components/CreativeMenu/index.css
.menu-container {
  background-color: rgb(144, 255, 168);
}
.flex {
  display: flex;
  justify-content: center;
  align-items: center;
}

.menu {
  display: flex;
  list-style: none;
  flex-wrap: wrap;
}

.menu-item {
  position: relative;
  margin: 0 10px;
  color: black;
  transition: all 0.5s;
  cursor: pointer;
  padding: 5px 10px;
}

a {
  text-decoration: none;
  color: currentColor;
  text-transform: uppercase;
  transition: all 0.5s;
  display: inline-block;
  padding: 4px 8px;
}

/* growing border */
.growing-border .menu-item::before,
.growing-border .menu-item::after {
  content: "";
  background-color: blue;
  position: absolute;
  left: 0;
  width: 100%;
  height: 2px;
  transform: scale(0);
  transition: all 0.3s;
}
.growing-border .menu-item::before {
  transform: scale(0);
  top: 0;
  transform-origin: left;
}
.growing-border .menu-item::after {
  transform: scale(0);
  bottom: 0;
  transform-origin: right;
}

.growing-border .menu-item:hover:before,
.growing-border .menu-item:hover::after {
  transform: scale(1);
}

/* background-border */

.background-border .menu-item::before,
.background-border .menu-item::after {
  content: "";
  position: absolute;
  transition: all 0.5s;
  width: 12px;
  height: 12px;
  border: 3px solid red;
  transition: all 0.5s;
  opacity: 0;
}

.background-border .menu-item::before {
  left: 12px;
  bottom: 12px;
  border-width: 0 0 3px 3px;
}
.background-border .menu-item::after {
  top: 12px;
  right: 12px;
  border-width: 3px 3px 0 0;
}

.background-border .menu-item:hover:before {
  left: -8px;
  bottom: -8px;

  border-width: 0 0 3px 3px;
  opacity: 1;
}
.background-border .menu-item:hover:after {
  top: -8px;
  right: -8px;
  border-width: 3px 3px 0 0;
  opacity: 1;
}
.background-border .menu-item:hover {
  background-color: tomato;
  color: white;
}

/* split-background */
.split-background .menu-item a {
  display: inline-block;
  position: relative;
  width: 80px;
  height: 40px;
  line-height: 40px;
  text-align: center;
}

.split-background .menu-item a > div {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.split-background .menu-item span {
  position: absolute;
  background-color: #262626;
  width: 100%;
  height: 25%;
  /* z-index: -1; */
  left: 0;
  top: 0;
  transform: scaleX(0);
  transition: all 0.5s;
  transform-origin: left;
}
.split-background .menu-item:hover {
  color: white;
}

.split-background .menu-item:hover span {
  transform: scaleX(1);
}

.split-background .menu-item span:nth-child(2) {
  transition-delay: 0.2s;
  top: 25%;
}

.split-background .menu-item span:nth-child(3) {
  transition-delay: 0.4s;
  top: 50%;
}

.split-background .menu-item span:nth-child(4) {
  transition-delay: 0.6s;
  top: 75%;
}

/* border-bottom-moving */
.border-bottom-moving a::before,
.border-bottom-moving a::after {
  content: "";
  width: 0;
  height: 5px;
  position: absolute;
  transition: all 0.5s;
}
.border-bottom-moving a::before {
  background-color: #00bcd4;
  top: 120%;
  left: 0;
}
.border-bottom-moving a::after {
  background-color: #f0f;
  top: 120%;
  right: 0;
}

.border-bottom-moving a:hover::before {
  width: 50%;
  transform: translateX(100%);
}

.border-bottom-moving a:hover::after {
  width: 50%;
  transform: translateX(-100%);
}

/* blurry-menu */

.blurry-menu:hover a {
  filter: blur(5px);
  opacity: 0.2;
}

.blurry-menu a:hover {
  transform: scale(1.5);
  background-color: crimson;
  color: white;
  filter: blur(0);
  opacity: 1;
}

/* double-menu */
.double-menu {
  flex-direction: column;
}
.double-menu .menu-item {
  position: relative;
}

.double-menu a {
  letter-spacing: 2px;
  font-weight: 300;
  height: 40px;
  position: relative;
  overflow: hidden;
  margin: 5px 10px;
}

.double-menu a span {
  position: relative;
  height: 100%;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: all 0.5s;
  transition-delay: 0.5s;
}

.double-menu .menu-item a:hover span {
  transform: translateY(-100%);
  transition-delay: 0;
}

.double-menu .menu-item::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-color: #16a085;
  transform: scaleX(0);
  transition: all 0.5s;
  transform-origin: left;
}

.double-menu .menu-item:hover::before {
  transform: scaleX(1);
  transform-origin: right;
  transition-delay: 0.5s;
}

/* two-border */
.two-border a {
  transition: all 0.5s;
  position: relative;
}

.two-border a::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  transform: scale(1.5);
  border-top: 2px solid black;
  border-bottom: 2px solid black;
  transition: all 0.5s;
  opacity: 0;
}

.two-border a:hover:before {
  transform: scale(1.2);
  opacity: 1;
}

.two-border a::after {
  content: "";
  position: absolute;
  top: 2px;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: black;
  transform: scale(0);
  transition: all 0.5s;
  /* z-index: -1; */
}

.two-border a:hover:after {
  transform: scale(1);
}

.two-border a:hover {
  /* color: rgb(0, 255, 21); */
}

/* border sniper */
.border-sniper a {
  transition: all 0.5s;
  position: relative;
}

.border-sniper a:hover {
  color: #f0f;
}

.border-sniper a span:first-child::before,
.border-sniper a span:first-child::after,
.border-sniper a span:last-child::before,
.border-sniper a span:last-child::after {
  content: "";
  position: absolute;
  width: 8px;
  height: 8px;
  background-color: transparent;
  opacity: 0;
  transition: all 0.5s;
}

.border-sniper a span:first-child::before {
  top: 0;
  left: 0;
  border-top: 2px solid #f0f;
  border-left: 2px solid #f0f;
}

.border-sniper a span:first-child::after {
  top: 0;
  right: 0;
  border-top: 2px solid #f0f;
  border-right: 2px solid #f0f;
}

.border-sniper a span:last-child::before {
  bottom: 0;
  left: 0;
  border-bottom: 2px solid #f0f;
  border-left: 2px solid #f0f;
}

.border-sniper a span:last-child::after {
  bottom: 0;
  right: 0;
  border-bottom: 2px solid #f0f;
  border-right: 2px solid #f0f;
}

.border-sniper a:hover span:first-child::before,
.border-sniper a:hover span:first-child::after,
.border-sniper a:hover span:last-child::before,
.border-sniper a:hover span:last-child::after {
  opacity: 1;
}

.border-sniper a:hover span:first-child::before {
  top: -8px;
  left: -8px;
}

.border-sniper a:hover span:first-child::after {
  top: -8px;
  right: -8px;
}
.border-sniper a:hover span:last-child::before {
  bottom: -8px;
  left: -8px;
}

.border-sniper a:hover span:last-child::after {
  bottom: -8px;
  right: -8px;
}

/* border-rotation */
.border-rotation a {
  position: relative;
  transition: all 0.5s;
  color: #f0f;
}
.border-rotation a::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: transparent;
  border-top: 2px solid #f0f;
  border-left: 2px solid #f0f;
  transition: all 0.5s;
}
.border-rotation a:hover::before,
.border-rotation a:hover::after {
  width: 15px;
  height: 15px;
  transform: rotate(360deg);
}

.border-rotation a::after {
  content: "";
  position: absolute;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
  background-color: transparent;
  border-bottom: 2px solid #f0f;
  border-right: 2px solid #f0f;
  transition: all 0.5s;
}

/* colorful-layer */
.colorful-layer {
  flex-direction: column;
}
.colorful-layer a {
  color: transparent;
  font-size: 50px;
  -webkit-text-stroke: 1px white;
  position: relative;
  font-weight: 900;
}

.colorful-layer a::before,
.colorful-layer a::after {
  content: attr(data-text);
  position: absolute;
  top: 4px;
  left: 8px;
  transition: all 0.5s;
}

.colorful-layer a:hover::before {
  z-index: 1;
  color: red;
  -webkit-text-stroke: 1px black;
  transform: translate(7px, -7px);
}

.colorful-layer a:hover::after {
  z-index: 2;
  color: rgb(47, 247, 187);
  -webkit-text-stroke: 1px black;
  transform: translate(14px, -14px);
}

.colorful-layer a:hover {
  color: white;
  -webkit-text-stroke: 1px black;
  transition: all 0.5s;
}

